@startuml

title __PIZZERIA's Class Diagram__\n
  

namespace pizzas {
    abstract class pizzas.Pizza {
        # dough : String
        # name : String
        # sauce : String
        # toppings : ArrayList<String>
        + cook()
        + cut()
        + getName()
        + prepare()
        + wrap()
    }
    namespace impl {
        class pizzas.impl.CheeseBrestPizza {
            + CheeseBrestPizza()
        }
        class pizzas.impl.CheesePizza {
            + CheesePizza()
        }
        class pizzas.impl.CheeseStrasbourgPizza {
            + CheeseStrasbourgPizza()
        }
        class pizzas.impl.GreekBrestPizza {
            + GreekBrestPizza()
        }
        class pizzas.impl.GreekPizza {
            + GreekPizza()
        }
        class pizzas.impl.GreekStrasbourgPizza {
            + GreekStrasbourgPizza()
        }
    }
}

namespace pizzerias {
    abstract class pizzerias.Pizzeria {
        {abstract} + createPizza()
        + orderPizza()
    }
    namespace impl {
        class pizzerias.impl.PizzeriaBrest {
            + createPizza()
        }
        class pizzerias.impl.PizzeriaStrasbourg {
            + createPizza()
        }
    }
}

  

pizzas.impl.CheeseBrestPizza -up-|> pizzas.impl.CheesePizza
pizzas.impl.CheesePizza -up-|> pizzas.Pizza
pizzas.impl.CheeseStrasbourgPizza -up-|> pizzas.impl.CheesePizza
pizzas.impl.GreekBrestPizza -up-|> pizzas.impl.GreekPizza
pizzas.impl.GreekPizza -up-|> pizzas.Pizza
pizzas.impl.GreekStrasbourgPizza -up-|> pizzas.impl.GreekPizza
pizzerias.impl.PizzeriaBrest -up-|> pizzerias.Pizzeria
pizzerias.impl.PizzeriaStrasbourg -up-|> pizzerias.Pizzeria


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
